Improve header bar search behavior